# cml_tools

./: .bashrc  .gitignore  .mambarc  Makefile  README.md  TODO.md  env.sh  env_mkl.sh  env_pip.sh  pyproject.toml  sync.sh
documents/: snippets.py
examples/: FastICA.ipynb  README.md  fastica.sh
src/cml/: __init__.py  affinity.py  databricks.py  desc_stats.py  fastica.py  label_expand.py  recency_curves.py  record.py  skutil.py  time_curves.py  whiten.py
src/cml/ehr/: code_name_mangle.py  curves.py  dtypes.py  omop_templates.py  samplespace.py  standardizer.py
src/cml/nn/: encoding.py  interpolate.py  loss_functions.py  online_norm.py  trainers.py
src/cml/plot/: ica_barplot.py  ica_model.py  loss_curves.py
src/cml/script/: ehr_curves.py  ehr_projection_points.py  fastica.py  merge_samples.py
src/cml/sql/: __init__.py  cohort.sql  concepts.sql  conditions.sql  conditions_daily.sql  counts.sql  measurement_stats.sql  measurements.sql  measurements_daily.sql  medications.sql  medications_daily.sql  procedures.sql  procedures_daily.sql  visits.sql  (+9 more)
src/cml_scripts/: fastica.py
src/cml_tests/: test_fastica.py  test_imports.py
src/cml_tools/: fastica.py  online_norm.py  testing.py  whiten.py
tests/: test_imports.py  test_online_norm.py  test_whiten.py
tests/neural_net/: test_online_norm.py
tests/nn/: test_loss_functions.py  test_online_norm.py  test_whiten.py
tools/: base_environment.yaml  build_env.sh  check_segfault.py  check_tanh.py  jax_requirements.txt  kmp_vars.sh  omp_vars.sh  requirements.txt  torch_requirements.txt  unset_vars.sh  versions.py
(+24 files in other folders)
